--- a/index.html
+++ b/index.html
@@ -5,13 +5,45 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
+    <link href="https://fonts.googleapis.com/css2?family=Bai+Jamjuree:wght@400;600&display=swap" rel="stylesheet"
+
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+
+    <!--Estilos personalizados -->
+    <link rel="stylesheet" href="styles.css">
 
     <title>Hello, world!</title>
   </head>
   <body>
-    <h1>Hello, world!</h1>
+    <section id="hero">
+        <div class="container">
+
+            <section class="row">
+                <div class="col-12 d-flex justify-content-center">
+                    <svg width="125" height="125" xmlns="http://www.w3.org/2000/svg"><g stroke="#26BBA4" stroke-width="10" fill="none" fill-rule="evenodd"><circle cx="62.5" cy="62.5" r="57.5"/><path d="M85.481 85.481c-12.692 12.692-33.27 12.692-45.962 0s-12.692-33.27 0-45.962 33.27-12.692 45.962 0" stroke-linecap="round"/></g></svg>
+                </div>
+                <div class="col-8 offset-2">
+                    
+                    <h1 class="colorTexto titular text-center pt-5">A history of everything you copy</h1>
+                    <h2 class="h5 colorTextoDos text-center pt-2">Clipboard allows you to track and organize everything you copy. Instantly acces your clipboard on all your devices.</h2>
+
+                </div>
+
+                <div class="col-4 offset-2 pt-5 d-flex justify-content-end">
+                    <button href="#" class="btn-primario">Download for iOS</button>
+                </div>
+                <div class="col-4 pt-5">
+                    <button class="btn-secundario">Download for Mac</button>
+                </div>
+            </section>
+        </div>
+    </section>
+    
+
+
+
+
 
     <!-- Optional JavaScript; choose one of the two! -->
 
