creando el readme y agregando imagen representativa del proyecto

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <!--Estilos personalizados -->
     <link rel="stylesheet" href="styles.css">
 
-    <title>Hello, world!</title>
+    <title>Clipboard landing page challenge on Frontend Mentor</title>
   </head>
   <body>
     <section id="hero">
